# symwars3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  whatthis.txt
common/: debug.cpp  debug.h  platform.cpp  platform.h  texture.cpp  texture.h  ustring.cpp  ustring.h  utils.cpp  utils.h  window.cpp  window.h
common/ai/: ai.cpp  ai.h
common/econ/: demand.cpp  demand.h  utility.cpp  utility.h
common/gui/: cursor.cpp  cursor.h  draw2d.cpp  draw2d.h  font.cpp  font.h  gui.cpp  gui.h  icon.cpp  icon.h  inevent.cpp  inevent.h  richtext.cpp  richtext.h  sprite.cpp  sprite.h  viewlayer.cpp  viewlayer.h  widget.cpp  widget.h
common/gui/widgets/: barbutton.cpp  barbutton.h  button.cpp  button.h  checkbox.cpp  checkbox.h  dropdowns.cpp  dropdowns.h  editbox.cpp  editbox.h  frame.cpp  frame.h  image.cpp  image.h  insdraw.cpp  insdraw.h  link.cpp  link.h  listbox.cpp  listbox.h  text.cpp  text.h  textarea.cpp  textarea.h  textblock.cpp  textblock.h  touchlistener.cpp  touchlistener.h  viewportw.cpp  viewportw.h  vscrollbar.cpp  vscrollbar.h  windoww.cpp  windoww.h
common/math/: 3dmath.cpp  3dmath.h  barycentric.cpp  barycentric.h  brush.cpp  brush.h  camera.cpp  camera.h  fixmath.cpp  fixmath.h  frustum.cpp  frustum.h  hmapmath.cpp  hmapmath.h  line.cpp  line.h  matrix.cpp  matrix.h  physics.cpp  physics.h  plane2i.cpp  plane2i.h  plane3f.cpp  plane3f.h  polygon.cpp  polygon.h  quaternion.cpp  quaternion.h  triangle.h  vec2f.h  vec2i.h  vec3f.cpp  vec3f.h  vec3i.cpp  vec3i.h  vec4f.cpp  vec4f.h
common/net/: client.cpp  client.h  net.cpp  net.h  packets.h  readpackets.cpp  readpackets.h  sendpackets.cpp  sendpackets.h  server.cpp  server.h
common/path/: astarpath.cpp  astarpath.h  binheap.cpp  binheap.h  collidertile.cpp  collidertile.h  jpsexpansion.cpp  jpsexpansion.h  jpspartpath.cpp  jpspartpath.h  jpspath.cpp  jpspath.h  mempool.cpp  mempool.h  partialpath.cpp  partialpath.h  pathdebug.cpp  pathdebug.h  pathjob.cpp  pathjob.h  pathnode.cpp  pathnode.h  reconstructpath.cpp  reconstructpath.h
common/phys/: collision.cpp  collision.h  trace.cpp  trace.h
common/render/: billboard.cpp  billboard.h  dmdmodel.cpp  dmdmodel.h  foliage.cpp  foliage.h  heightmap.cpp  heightmap.h  model.cpp  model.h  ms3d.cpp  ms3d.h  particle.cpp  particle.h  projectile.cpp  projectile.h  screenshot.cpp  screenshot.h  shader.cpp  shader.h  shadow.cpp  shadow.h  skybox.cpp  skybox.h  transaction.cpp  transaction.h  vertexarray.cpp  vertexarray.h  water.cpp  water.h
common/save/: savemap.cpp  savemap.h
common/script/: console.cpp  console.h  script.cpp  script.h
common/sim/: build.cpp  build.h  building.cpp  building.h  buildingtype.cpp  buildingtype.h  connectable.cpp  connectable.h  crpipe.cpp  crpipe.h  deposit.cpp  deposit.h  infrastructure.cpp  infrastructure.h  job.cpp  job.h  labourer.cpp  labourer.h  order.cpp  order.h  player.cpp  player.h  powl.cpp  powl.h  resources.cpp  resources.h  road.cpp  road.h  selection.cpp  selection.h  sim.cpp  sim.h  unit.cpp  unit.h  unitmove.cpp  unitmove.h  unittype.cpp  unittype.h
common/sound/: sound.cpp  sound.h
common/sys/: unicode.cpp  unicode.h
game/: SymWars3.cbp  SymWars3.depend  SymWars3.layout  SymWars3.sln  game.vcxproj  game.vcxproj.filters  gmain.cpp  gmain.h  gres.h  keymap.cpp  keymap.h  res.rc
game/Release/: RCa12896  res.res
game/gui/: editorgui.cpp  editorgui.h  ggui.cpp  ggui.h  gviewport.cpp  gviewport.h  playgui.cpp  playgui.h
libs/: readme.txt
libs/GL/: glaux.h
libs/SDL2-2.0.1/: Makefile  Makefile.rules  config.status  libtool
libs/SDL2-2.0.1/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config_android.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_pandora.h  SDL_config_psp.h  SDL_config_windows.h  SDL_config_wiz.h  SDL_copying.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_opengles.h  SDL_opengles2.h  SDL_pixels.h  SDL_platform.h  (+30 more)
libs/SDL2-2.0.1/src/: SDL_assert_c.h  SDL_error_c.h
libs/jpeglib/: jpeg.lib  jpeglib.h
libs/libzip-0.11.1/: CMakeLists.txt
libs/lpng/: png.h  pngconf.h  pngdebug.h  pnginfo.h  pngpriv.h  pngstruct.h  zconf.h
libs/objectscript/: objectscript.cpp  objectscript.h  os-binder-arg-cc-functions.h  os-binder-cc-functions.h  os-binder-function.h  os-binder.h  os-heap.cpp  os-heap.h
libs/physfs-2.0.3/: physfs.h  physfs_casefolding.h
libs/zlib-1.2.5/: CMakeLists.txt  zlib.h
utils/: indentspacestotabs.py  indentspacestotabs.sh
(+498 files in other folders)
